# citra

src/: CMakeLists.txt
src/citra/: CMakeLists.txt  citra.cpp  config.cpp  default_ini.h
src/citra/emu_window/: emu_window_sdl2.cpp  emu_window_sdl2.h
src/citra_qt/: bootmanager.cpp  bootmanager.h
src/common/logging/: backend.cpp  log.h
src/core/: CMakeLists.txt  core.cpp  movie.cpp  movie.h  settings.cpp  settings.h
src/core/frontend/: emu_window.h  screenshot_data.h
src/core/hle/service/hid/: hid.cpp
src/core/hle/service/ir/: extra_hid.cpp  extra_hid.h  ir_rst.cpp  ir_rst.h
src/scripted_input/: CMakeLists.txt  README.md  script_runner.cpp  script_runner.h  scripted_buttons.cpp  scripted_buttons.h  scripted_input.cpp  scripted_input.h
src/video_core/: CMakeLists.txt  renderer_base.cpp  renderer_base.h
src/video_core/renderer_opengl/: renderer_opengl.cpp  renderer_opengl.h
